updated link to cv

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <span>|</span>
 <a href="http://www.phili.pk">Photos</a>
 <span>|</span>
-<a href="http://www.phili.pk">CV</a>
+<a href="http://www.phili.pk/enny">CV</a>
 <span>|</span>
 <a href="https://github.com/philipkenny">Github</a>
 </span>
