--- a/enny/index.html
+++ b/enny/index.html
@@ -61,7 +61,7 @@
 <p>			Aachen 52066            <br />
 			Deutschland             </p>
 
-<p>                     +49 12 7575 01005       </p>
+<p>                     +49 15 7575 01005       </p>
 
 <p>
 <a class="mail" href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
@@ -142,6 +142,18 @@
 
 <div><hr /></div>
 
+<div id="courses">
+<h3>	Other Courses	</h3>
+
+<p class="left">	Mar 2016	</p>
+<p>			<b>Machine Learning</b>		<br />
+			Stanford University / Coursera	</p>
+
+</div>
+<div class="large"></div>
+
+<div><hr /></div>
+
 <div id="skills">
 <h3>	Skills	</h3>
 
@@ -154,8 +166,8 @@
 
 <div>
 <p class="left">	Programming	</p>
-<p> 			C/C++,&nbsp; Python&nbsp; <i>(advanced)</i>	<br />
-			Fortran&nbsp;	<i>(intermediate)</i>		<br />
+<p> 			C/C++,&nbsp; <i>(advanced)</i>	<br />
+			Python&nbsp; Fortran&nbsp;	<i>(intermediate)</i>		<br />
 			Java,&nbsp; Javascript&nbsp; <i>(basic)</i>	</p>
 </div>
 
@@ -184,8 +196,8 @@
 <p class="left">	Machine Learning	</p>
 <p>			Clustering&nbsp; (k-means, EM, mean-shift)&nbsp;
 			<i>(intermediate)</i>	<br />
-			Support Vector Machines,&nbsp; Boosting&nbsp; 
-			<i>(basic)</i>		</p>
+			Support Vector Machines,&nbsp; Boosting,&nbsp; 
+			Neural Networks&nbsp; <i>(basic)</i>		</p>
 </div>
 
 <div class="small"></div>
