--- a/enny/index.html
+++ b/enny/index.html
@@ -145,6 +145,11 @@
 <div id="courses">
 <h3>	Other Courses	</h3>
 
+<p class="left">	Oct 2016	</p>
+<p>			<b>Fundamentals of Digital Image and Video 
+			Processing</b><br />
+			Northwestern University / Coursera	</p>
+
 <p class="left">	Mar 2016	</p>
 <p>			<b>Machine Learning</b>		<br />
 			Stanford University / Coursera	</p>
