CV contact details updated

--- a/enny/index.html
+++ b/enny/index.html
@@ -58,10 +58,10 @@
 
 <!-- <div><hr /></div> -->
 <div class="aside">
-<p>			Aachen 52066            <br />
-			Deutschland             </p>
+<p>			Cambridge 3434            <br />
+			New Zealand             </p>
 
-<p>                     +49 15 7575 01005       </p>
+<p>                     +64 22 676 4196       </p>
 
 <p>
 <a class="mail" href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
