added github url (pretty meta)

--- a/enny/index.html
+++ b/enny/index.html
@@ -67,7 +67,12 @@
 <a class="mail" href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
 </p>
 
+<p>
 <a href="http://www.phili.pk/enny">         phili.pk/enny </a>
+</p>
+<p>
+<a href="https://github.com/philipkenny">github.com/philipkenny </a>
+</p>
 </div>
 </div>
 <div class="large"></div>
