Parital fix to Goog fonts

--- a/enny/index.html
+++ b/enny/index.html
@@ -7,7 +7,7 @@
 
 <style type="text/css"> 
 <!--
-        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic,300italic);
+        @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic,300italic');
 	body * { overflow:auto; font-family:'Open Sans', sans-serif; max-width:60em; /*border:dashed 1px;*/ }
 	div { min-width:30em; }
 	h1 { margin-bottom:0em; }
@@ -81,6 +81,16 @@
 
 <div id="experience">
 <h3>	Experience	</h3>
+
+<p class="left">	March 2017 - Current	</p>
+<p>			<b>Process Engineer</b>	<br>
+			Tetra Pak,	
+			<span class="light">New Zealand</span>	<br>
+			<i>Design, installation and commissioning of dairy plant
+            equipment. Including costing of equipment and labour,
+            procurement, participating in HAZOPs, automation 
+            commissioning and a lot of troubleshooting/ fault finding
+            </i></p>
 
 <p class="left">	May 2015 - Nov 2015	</p>
 <p>			<b>Master's Thesis</b>	<br />
